--- a/settings/project.json
+++ b/settings/project.json
@@ -5,21 +5,7 @@
     ]
   ],
   "excluded-modules": [
-    "Geom Utils",
-    "Mesh",
-    "MotionStreak",
-    "Physics",
-    "Spine Skeleton",
-    "StudioComponent",
-    "TiledMap",
-    "VideoPlayer",
-    "WebView",
-    "3D",
-    "3D Primitive",
-    "3D Physics/cannon.js",
-    "3D Physics/Builtin",
-    "3D Particle",
-    "SafeArea"
+    "3D Physics/Builtin"
   ],
   "group-list": [
     "default"
@@ -35,7 +21,7 @@
     "height": 640,
     "width": 960
   },
-  "last-module-event-record-time": 1605889072109,
+  "last-module-event-record-time": 1607610984231,
   "assets-sort-type": "name",
   "facebook": {
     "appID": "",
@@ -50,5 +36,6 @@
   "migrate-history": [
     "cloud-function"
   ],
-  "preview-port": 7456
+  "preview-port": 7456,
+  "clear-simulator-cache": true
 }
