--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@ quick_gen_project_*_autogen.sh.meta
 #//////////////////////////
 
 .vscode/
+
+#//////////////////////////
+# Hotupdate
+#//////////////////////////
+packages-hot-update/
