--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -8,7 +8,7 @@
     "designResolution": {
       "width": 720,
       "height": 1280,
-      "fitWidth": false,
+      "fitWidth": true,
       "fitHeight": false
     }
   },
