--- a/extensions/miles-scene-tool/package.json
+++ b/extensions/miles-scene-tool/package.json
@@ -15,6 +15,12 @@
                 "methods": [
                     "autoGenProperty"
                 ]
+            },
+            "saveHotUpdateConfig": {
+                "public": true,
+                "methods": [
+                    "saveHotUpdateConfig"
+                ]
             }
         }
     },
