--- a/settings/miles-editor-config.json
+++ b/settings/miles-editor-config.json
@@ -1,5 +1,5 @@
 {
-    "build-template": true,
+    "build-template": false,
     "hotupdate": {
         "url": "/Channel/Dev/1.0.0/ResPkg",
         "version": "1.0.0.1",
