--- a/extensions/miles-scene-tool/package.json
+++ b/extensions/miles-scene-tool/package.json
@@ -15,6 +15,11 @@
                 "methods": [
                     "autoGenProperty"
                 ]
+            },"replaceComponent": {
+                "public": true,
+                "methods": [
+                    "replaceComponent"
+                ]
             },
             "saveHotUpdateConfig": {
                 "public": true,
