--- a/extensions/miles-editor-tool/package.json
+++ b/extensions/miles-editor-tool/package.json
@@ -8,7 +8,7 @@
     "main": "./dist/main.js",
     "contributions": {
         "builder": "./dist/builder.js",
-        "inspector":{
+        "inspector": {
             "section": {
                 "node": {
                     "MToggle": "./dist_origin/inspector/mtoggle.js"
@@ -38,6 +38,12 @@
                 "public": false,
                 "methods": [
                     "autoGenProperty"
+                ]
+            },
+            "delInvalidProperty": {
+                "public": false,
+                "methods": [
+                    "delInvalidProperty"
                 ]
             },
             "replaceComponent": {
@@ -104,9 +110,15 @@
             },
             {
                 "path": "MTools/场景操作",
-                "label": "生成属性",
+                "label": "生成属性脚本",
                 "icon": "./static/icon.png",
                 "message": "autoGenProperty"
+            },
+            {
+                "path": "MTools/场景操作",
+                "label": "删除无效的属性脚本",
+                "icon": "./static/icon.png",
+                "message": "delInvalidProperty"
             },
             {
                 "path": "MTools/场景操作",
