--- a/settings/miles-editor-config.json
+++ b/settings/miles-editor-config.json
@@ -1,8 +1,8 @@
 {
     "build-template": false,
     "hotupdate": {
-        "url": "/Channel/Dev/1.0.0/ResPkg",
-        "version": "1.0.0.1",
+        "url": "http://127.0.0.1/Channel/Dev/1.0.0/ResPkg",
+        "version": "1.0.0",
         "src": "D:/Workspace/CocosMLib/build/android"
     }
 }
