--- a/extensions/miles-scene-tool/package.json
+++ b/extensions/miles-scene-tool/package.json
@@ -10,12 +10,7 @@
             "script": "./dist/main.js"
         },
         "messages": {
-            "autoGenProperty": {
-                "public": true,
-                "methods": [
-                    "autoGenProperty"
-                ]
-            },"replaceComponent": {
+            "replaceComponent": {
                 "public": true,
                 "methods": [
                     "replaceComponent"
