--- a/settings/miles-editor-config.json
+++ b/settings/miles-editor-config.json
@@ -1,5 +1,5 @@
 {
-    "build-template": false,
+    "build-template": true,
     "hotupdate": {
         "url": "http://127.0.0.1/Channel/Dev/1.0.0/ResPkg",
         "version": "1.0.0",
