--- a/native/engine/android/app/AndroidManifest.xml
+++ b/native/engine/android/app/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
   <application android:extractNativeLibs="true" android:allowBackup="true" android:label="@string/app_name" android:usesCleartextTraffic="true" android:icon="@mipmap/ic_launcher" android:resizeableActivity="true">
     <meta-data android:name="android.app.lib_name" android:value="cocos"/>
-    <activity android:name="com.cocos.game.AppActivity" android:screenOrientation="reverseLandscape" android:configChanges="orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:launchMode="singleTask" android:exported="true">
+    <activity android:name="com.cocos.game.AppActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:launchMode="singleTask" android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
