--- a/native/engine/android/instantapp/AndroidManifest.xml
+++ b/native/engine/android/instantapp/AndroidManifest.xml
@@ -7,7 +7,7 @@
   <application android:extractNativeLibs="true" android:allowBackup="true" android:label="@string/app_name" android:usesCleartextTraffic="true" android:supportsRtl="true" android:icon="@mipmap/ic_launcher" android:resizeableActivity="true">
     <meta-data android:name="aia-compat-api-min-version" android:value="1"/>
     <meta-data android:name="android.app.lib_name" android:value="cocos"/>
-    <activity android:name="com.cocos.game.InstantActivity" android:screenOrientation="reverseLandscape" android:configChanges="orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:launchMode="singleTask" android:exported="true">
+    <activity android:name="com.cocos.game.InstantActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:launchMode="singleTask" android:exported="true">
       <intent-filter android:order="1">
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.BROWSABLE"/>
