--- a/extensions/miles-editor-tool/package.json
+++ b/extensions/miles-editor-tool/package.json
@@ -15,6 +15,15 @@
                 }
             }
         },
+        "assets": {
+            "menu": {
+                "methods": "./dist/AssetMenu.js",
+                "createMenu": "onCreateMenu",
+                "assetMenu": "onAssetMenu",
+                "dbMenu": "onDBMenu",
+                "panelMenu": "onPanelMenu"
+            }
+        },
         "messages": {
             "formatProject": {
                 "public": false,
