--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "NewProject3",
-  "type": "3d",
+  "name": "cocosmlib",
   "uuid": "c30b28da-749e-479b-bcb6-cecd8d7be9e3",
-  "version": "3.6.3",
   "creator": {
     "version": "3.8.2"
+  },
+  "devDependencies": {
+    "minigame-api-typings": "^3.8.4"
   }
 }
