--- a/settings/amun-editor-config.json
+++ b/settings/amun-editor-config.json
@@ -3,12 +3,14 @@
         "gameName": "OutTest",
         "channel": "Dev",
         "version": "1.0.0",
-        "cdnUrl": "https://",
         "mainVersion": "1.0.0",
+        "cdnUrl": "https://",
+        "hotupdate": true,
         "hotupdateServer": "https:///OutTest/Channel/Dev/1.0.0/ResPkg",
         "minigameServer": "https:///OutTest/Channel/Dev/1.0.0/ResPkg/"
     },
     "hotupdate": {
-        "src": "D:/Workspace/CocosMLib/build/android-001"
+        "src": "D:/Workspace/CocosMLib/build/android-001",
+        "buildPath": "D:/Workspace/CocosMLib/build/android-001"
     }
 }
