--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ quick_gen_project_*_autogen.sh.meta
 #//////////////////////////
 packages-hot-update/
 profiles/v2/packages/scene.json
+profiles/v2/packages/reference-image.json
