--- a/extensions/amun-editor-tool/tsconfig.json
+++ b/extensions/amun-editor-tool/tsconfig.json
@@ -7,6 +7,7 @@
         "types": [
             "node",
             "@cocos/creator-types/editor",
+            "@cocos/creator-types/engine"
         ]
     }
 }
