--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "cocosmlib",
-  "uuid": "c30b28da-749e-479b-bcb6-cecd8d7be9e3",
-  "creator": {
-    "version": "3.8.3"
-  },
-  "devDependencies": {
-    "minigame-api-typings": "^3.8.4"
-  }
+    "name": "cocosmlib",
+    "uuid": "c30b28da-749e-479b-bcb6-cecd8d7be9e3",
+    "creator": {
+        "version": "3.8.3"
+    },
+    "devDependencies": {
+        "minigame-api-typings": "^3.8.4"
+    },
+    "dependencies": {
+        "crypto-es": "^2.1.0"
+    }
 }
