--- a/extensions/ccc-skeleton-viewer/package.json
+++ b/extensions/ccc-skeleton-viewer/package.json
@@ -83,8 +83,8 @@
     "shortcuts": [
       {
         "message": "open-view-panel",
-        "mac": "",
-        "win": ""
+        "mac": "alt+p",
+        "win": "alt+p"
       }
     ],
     "assets": {
